--- a/build.xml
+++ b/build.xml
@@ -8,11 +8,7 @@
   </target>
 
   <target name="compile" depends="init">
-    <javac  includeantruntime="false" srcdir="src" destdir="build/classes">
-        <include name="**/application/**"/>
-        <include name="**/testcases/*.java"/>
-        <exclude name="**/data/**"/>
-    </javac>
+    <javac  includeantruntime="false" srcdir="src" destdir="build/classes"/>
   </target>
   
   <target name="execute" depends="compile">
