--- a/build.xml
+++ b/build.xml
@@ -8,7 +8,7 @@
   </target>
 
   <target name="compile" depends="init">
-    <javac  includeantruntime="false" srcdir="src" destdir="build/classes"/>
+    <javac  includeAntRuntime="false" srcdir="src" destdir="build/classes" debug="true" debuglevel="lines,vars,source"/>
   </target>
   
   <target name="execute" depends="compile">
@@ -16,10 +16,35 @@
             classname="application.accounting.Accounting">
     </java>
   </target>
-          
+  
   <target name="execute-jar" depends="archive">
     <java classpath="dist/accounting.jar"
             classname="application.accounting.Accounting">
+    </java>
+  </target>
+  
+  <target name="execute-input" depends="compile">
+    <java classpath="build/classes"
+            classname="application.accounting.Accounting"
+          input="./accounting.in">
+    </java>
+  </target>
+  
+  <target name="execute-argparser" depends="compile">
+    <java classpath="build/classes"
+            classname="application.accounting.Accounting">
+        <arg line="--input-file ./src/data/test.in
+             -o ./src/data/test.csv.new
+             -1 ./src7data/test.csv.log 0,75"/>
+    </java>
+  </target>
+  
+  <target name="execute-params" depends="compile">
+    <java classpath="build/classes"
+            classname="application.accounting.Accounting">
+        <arg line="--input-file ./src/data/test.in
+             -o ./src/data/test.csv.new
+             -1 ./src7data/test.csv.log 0,75"/>
     </java>
   </target>
   
