Funktioniert mit Argparser

--- a/build.xml
+++ b/build.xml
@@ -35,7 +35,7 @@
             classname="application.accounting.ArgParser">
         <arg line="--input-file ./src/data/test.in
                    -o ./src/data/test.csv.new
-                   -l ./src7data/test.csv.log 0,75"/>
+                   -l ./src/data/test.csv.log 0.75"/>
     </java>
   </target>
   
@@ -43,8 +43,8 @@
     <java classpath="build/classes"
             classname="application.accounting.Accounting">
         <arg line="--input-file ./src/data/test.in
-             -o ./src/data/test.csv.new
-             -l ./src7data/test.csv.log 0,75"/>
+                   -o ./src/data/test.csv.new
+                   -l ./src/data/test.csv.log 0.75"/>
     </java>
   </target>
   
