--- a/build.xml
+++ b/build.xml
@@ -9,6 +9,8 @@
         <pathelement path="${build}"/>
         <pathelement path="${dist}/data/lang"/>
     </path>
+   
+<!--erstellen--> 
     
   <target name="init">
     <mkdir dir="build/classes"/>
@@ -18,6 +20,38 @@
   <target name="compile" depends="create-language-links">
     <javac  includeAntRuntime="false" srcdir="src" destdir="build/classes" debug="true" debuglevel="lines,vars,source"/>
   </target>
+  
+  <target name="create-dirs" depends="init"> 
+          <mkdir dir="build/classes/package/de"/>
+          <mkdir dir="dist/data"/>
+  </target>
+  
+  <target name="test-set-language-links"
+          depends="create-dirs">
+      <condition property="isNotALangDir">
+          <not>
+              <available file="./dist/data/lang"
+                         type="dir" />
+          </not>
+      </condition>
+  </target>
+  
+  <target name="create-language-links"
+          depends="test-set-language-links" if="isNotALangDir">
+      <exec executable="ln"
+            error="/dev/null" os="Linux">
+          <arg line="-sn" />
+          <arg file="./src/data/lang" />
+          <arg file="./dist/data/lang" />
+      </exec>
+  </target>
+  
+  <target name="archive" depends="compile">
+    <jar destfile="dist/accounting.jar"
+        basedir="build/classes"/>
+  </target>
+  
+  <!--ausfuehren-->
   
   <target name="execute" depends="compile">
     <java
@@ -56,69 +90,22 @@
     </java>
   </target>
   
-  <!-- be: logging -->
   <target name="execute-logging"
           description="executes the application with a given logging level"
           depends="compile">
       <echo file="./build/classes/accounting_logging.properties" 
-            append="false">############################################################
-                #  	Default Logging Configuration File
-                #
-                # You can use a different file by specifying a filename
-                # with the java.util.logging.config.file system property.  
-                # For example java -Djava.util.logging.config.file=myfile
-                ############################################################
-
-                ############################################################
-                #  	Global properties
-                ############################################################
-
-                # &quot;handlers&quot; specifies a comma separated list of log Handler 
-                # classes.  These handlers will be installed during VM startup.
-                # Note that these classes must be on the system classpath.
-                # By default we only configure a ConsoleHandler, which will only
-                # show messages at the INFO and above levels.
+            append="false">
                 handlers= java.util.logging.ConsoleHandler
-
-                # To also add the FileHandler, use the following line instead.
-                #handlers= java.util.logging.FileHandler, java.util.logging.ConsoleHandler
-
-                # Default global logging level.
-                # This specifies which kinds of events are logged across
-                # all loggers.  For any given facility this global level
-                # can be overriden by a facility specific level
-                # Note that the ConsoleHandler also has a separate level
-                # setting to limit messages printed to the console.
                 .level= ${level}
 
-                ############################################################
-                # Handler specific properties.
-                # Describes specific configuration info for Handlers.
-                ############################################################
-
-                # default file output is in user&apos;s home directory.
                 java.util.logging.FileHandler.pattern = %h/java%u.log
                 java.util.logging.FileHandler.limit = 50000
                 java.util.logging.FileHandler.count = 1
                 java.util.logging.FileHandler.formatter = java.util.logging.SimpleFormatter
 
-                # Limit the message that are printed on the console to INFO and above.
                 java.util.logging.ConsoleHandler.level = ${level}
                 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 
-                # Example to customize the SimpleFormatter output format 
-                # to print one-line log message like this:
-                #     &lt;level&gt;: &lt;log message&gt; [&lt;date/time&gt;]
-                #
-                # java.util.logging.SimpleFormatter.format=%4$s: %5$s [%1$tc]%n
-
-                ############################################################
-                # Facility specific properties.
-                # Provides extra control for each logger.
-                ############################################################
-
-                # For example, set the com.xyz.foo logger to only log SEVERE
-                # messages:
                 com.xyz.foo.level = SEVERE
             </echo>
       
@@ -149,46 +136,18 @@
       </exec>
   </target>
   
-  <target name="create-dirs" depends="init"> 
-          <mkdir dir="build/classes/package/de"/>
-          <mkdir dir="dist/data"/>
-  </target>
-  
-  <!-- tests if the language links are set correct-->
-  <target name="test-set-language-links"
-          depends="create-dirs">
-      <condition property="isNotALangDir">
-          <not>
-              <available file="./dist/data/lang"
-                         type="dir" />
-          </not>
-      </condition>
-  </target>
-  
-  <!-- set the language link if it is not done yet -->
-  <target name="create-language-links"
-          depends="test-set-language-links" if="isNotALangDir">
-      <exec executable="ln"
-            error="/dev/null" os="Linux">
-          <arg line="-sn" />
-          <arg file="./src/data/lang" />
-          <arg file="./dist/data/lang" />
-      </exec>
-  </target>
-  
-  <target name="delete-dirs-carefully" depends="delete-language-links">
+  <!--aufraumen-->
+  <target name="clean" depends="delete-language-links">
       <delete dir="build"/>
       <delete dir="dist"/>
   </target>
   
-  <!--tests if the links are set-->
   <target name="test-remove-language-links">
       <condition property="isADir">
           <available file="./dist/data/lang" type="dir" />
       </condition>
   </target>
   
-  <!-- remove the link if it is not done yet -->
   <target name="delete-language-links"
           depends="test-remove-language-links" if="isAdir" >
       <exec executable="rm"
@@ -197,14 +156,4 @@
       </exec>
   </target>
   
-  <target name="archive" depends="compile">
-    <jar destfile="dist/accounting.jar"
-        basedir="build/classes"/>
-  </target>
-
-  <target name="clean" depends="init">
-    <delete dir="build"/>
-    <delete dir="dist"/>
-  </target>
-
 </project>
